// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with body1 detailVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-body1 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with body1 titleVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-body1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with body2 detailVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-body2 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with body2 titleVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-body2 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with button detailVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-button MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with button titleVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-button MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with caption detailVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-caption MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with caption titleVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-caption MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with error detailColor 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-body2 MuiTypography-colorError"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with error titleColor 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorError"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h1 detailVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-h1 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h1 titleVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-h1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h2 detailVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-h2 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h2 titleVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-h2 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h3 detailVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-h3 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h3 titleVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-h3 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h4 detailVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-h4 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h4 titleVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-h4 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h5 detailVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-h5 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h5 titleVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-h5 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h6 detailVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-h6 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h6 titleVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-h6 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with inherit detailColor 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-body2 MuiTypography-colorInherit"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with inherit detailVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with inherit titleColor 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorInherit"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with inherit titleVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with initial detailColor 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-body2"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with initial titleColor 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with overline detailVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-overline MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with overline titleVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-overline MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with primary detailColor 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-body2 MuiTypography-colorPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with primary titleColor 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with secondary detailColor 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-body2 MuiTypography-colorSecondary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with secondary titleColor 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorSecondary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with subtitle1 detailVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with subtitle1 titleVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with subtitle2 detailVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with subtitle2 titleVariant 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with textPrimary detailColor 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-body2 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with textPrimary titleColor 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with textSecondary detailColor 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-body2 MuiTypography-colorTextSecondary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with textSecondary titleColor 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Intro with title and detail 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-2 MuiTypography-body2 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Intro with title and icon 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-5 NatDSIcon-root-6"
    />
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Intro with title and without detail 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided when an invalid titleVariant property is provided should match snapshot 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-colorTextPrimary"
  >
    Test title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided when titleVariant property is undefined should match snapshot 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    Test title
  </h3>
</section>
`;

exports[`Intro component when no theme is explicitly provided and titleVariant property is undefined should match snapshot 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    Test title
  </h3>
</section>
`;

exports[`Intro component when no theme is explicitly provided when an invalid titleVariant property is provided should match snapshot 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-5 MuiTypography-colorTextPrimary"
  >
    Test title
  </h3>
</section>
`;
